VideoSurfaceLayer: use ChildLocalSurfaceIdAllocator in VideoFrameSubmitter.

This allows the submitter to update the LocalSurfaceId (by modifying the
child component) before submitting a new frame. The SurfaceLayerBridge
will be notified of the change and update its internal surface id.

Bug: 868008
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Iee17f20c753cc236b9ccce5d5bdfe05fb655b08e
Reviewed-on: https://chromium-review.googlesource.com/1157882
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Jeremy Roman <jbroman@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579812}
Former-commit-id: 0f644566076fcfa8ce721861122792cfd0bfff18